[project]
name = "interactive-quiz-game"
version = "0.1.0"
description = ""
authors = [
    {name = "chita521",email = "akhilachitluri2009@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "interactive_quiz_game", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
